--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -30,3 +30,42 @@
     width: 100px;
     height: 30px;
   }
+
+  
+  #menu-bar{
+    display: none !important;
+  }
+  label{
+    display: none ;
+  }
+  
+  @media only screen and (max-width: 769px) {
+    .foot {
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+    }
+    .foot .column {
+      border: 1px solid white;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+  }
+  #menu-bar:checked ~ ul{
+    display: block;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  }
+  }
+  
+  @media only screen and (min-width: 1024px) {
+    .foot{
+      flex-direction: row;
+      justify-content: flex-start;
+    }
+    .foot .column {
+      width: 14%;
+      display: flex;
+      flex-direction: column;
+  }
+    
+}
