--- a/src/components/header/head/head.css
+++ b/src/components/header/head/head.css
@@ -56,7 +56,11 @@ span{
     opacity: 1;
   }
   
-  
+  @media only screen and (max-width: 425px) {
+    .head {
+        display: none;
+    }
+  }
 
   
   
