--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -46,7 +46,7 @@
       text-align: center;
     }
     .foot .column {
-      border: 1px solid white;
+      /* border: 1px solid white; */
       width: 100%;
       display: flex;
       flex-direction: column;
