--- a/src/screen/screen.css
+++ b/src/screen/screen.css
@@ -14,12 +14,49 @@
     /* border: 1px solid black; */
 }
 
+hr {
+  width: 200px;
+  border: 3px solid var(--main);
+  margin-top: -13px;
+  border-radius: 2px;
+  text-align: left;
+}
 
-
-@media only screen and (min-width: 320px) {
+.pagination {
+  margin-top: 60px;
+}
+@media only screen and (max-width: 320px) {
+  .products {
+    padding-block: 60px;
+  }
   .all .list .cnt {
+    /* border: 1px solid black; */
     width: 48%;
-    padding: 40px 6px 0 0;
+    padding: 12px 6px 0 0;
+  }
+  .all .list {
+    padding-top: 40px;
+    justify-content: center;
+  }
+  .products h2 {
+    text-align: center;
+  }
+  hr {
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 375px) {
+  hr{
+    text-align: start;
+  }
+  .products {
+    padding-block: 60px;
+  }
+  .all .list .cnt {
+    /* border: 1px solid black; */
+    width: 48%;
+    padding: 12px 6px 0 0;
   }
   .all .list {
     justify-content: center;
