--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,11 @@
   width: 100%;
   justify-content: center;
 }
+
+.header {
+ width: 100%;
+ position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+  margin-top: -4px;
+}
