--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,3 +1,12 @@
 .card table tr td {
     width: 10%;
 }
+
+.card {
+    z-index: -5;
+}
+.linktoCat {
+    text-decoration: none;
+    color: var(--main)
+}
+
