--- a/src/components/header/navbar/navbar.css
+++ b/src/components/header/navbar/navbar.css
@@ -8,6 +8,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    z-index: 500;
   }
   
   .right {
@@ -48,7 +49,7 @@
     font-weight: 100;
   }
   .btn-search{
-    z-index: 10;
+    z-index: 10; 
     width: 40px;
     height: 40px;
     border-style: none;
@@ -110,4 +111,10 @@
       padding: 16px;
       font-size: 13px;
     } 
+  }
+
+  @media only screen and (min-width: 426px) {
+    .menu {
+      display: none;
+    }
   }
