--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,13 @@
     font-family: var(--font);
     margin: 0;
     padding: 0;
+    height: 100%;
+    /* padding-bottom: 100px; */
   }
-
+  
   .footer{
     width: 100%;
-    position: relative;
-    bottom: 0;
+    /* border: 3px solid blue */
    
   }
 
@@ -27,7 +28,7 @@
 .header {
  width: 100%;
  position: -webkit-sticky; /* Safari */
-  position: sticky;
+  position: relative;
   top: 0;
   margin-top: -4px;
 }
