--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -10,3 +10,49 @@
     color: var(--main)
 }
 
+
+.itemCard{
+    width: 100%;
+    border-radius: 16px;
+    border: 1px solid grey;
+    position: relative;
+    height: 40vh;
+    /* margin: 8px 10px 16px; */
+}
+
+.itemCard img{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 50%;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+}
+
+.itemCard .text {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    height: 50%;
+    padding-top: 8px;
+    white-space: nowrap;
+}
+
+.itemCard h5, .itemCard h6 {
+    padding-inline: 8px;
+    white-space:normal;
+}
+
+.itemCard button {
+    width: 100%;
+
+    position: absolute;
+    bottom: 0;
+
+    border:none;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    padding: 12px;
+    font-weight: 600;
+    background: linear-gradient(90deg, rgba(36,0,0,1) 0%, rgba(121,9,9,1) 35%, rgb(184, 3, 18) 100%);
+}
