--- a/src/components/header/ads/ads.css
+++ b/src/components/header/ads/ads.css
@@ -1,45 +1,54 @@
 .ads {
     position: relative;
     margin: 0px 0;
-    z-index: -1;
+    z-index: 1;
 }
 
 .container1 {
   padding-inline: 6px;
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 325px) {
   .ads{
     margin:0;
     padding: 0;
   }
   .image {
-      background-position: left;
-      height: auto;
+      background-position: center;
+      /* height: auto; */
+      width: 100%;
   }
-  .container1 {
-    padding: 0;
+  .container1{
+    text-align: center;
   }
 }
 
+
   @media only screen and (max-width: 768px) {
+    .container1{
+      text-align: center;
+    }
     .image {
-        background-position: left;
-        height: 100px;
+      background-position: center;
+      height: 100px
     }
   }
   
   @media only screen and (min-width: 1024px) {
+    .container1{
+      text-align: center;
+    }
     .image {
-        width: 100%;
+        /* width: 100%; */
         height: 150px;
     }
   }
   
   @media only screen and (min-width: 1440px) {
     .image {
-        width: 100%;
-        height: 200px;
+        /* width: 100%; */
+        height: 230px;
+        background-size: contain;
     }
   }
   
