--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
@@ -8,6 +7,7 @@
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   --font: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: Cambria;
   --title: 32px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -19,11 +19,12 @@ body {
   margin: 0;
   padding: 0;
   background-color: var(color);
+  color: black
 }
 
 
 @media only screen and (min-width: 320px) {
-  .container {
+  .our_container {
     padding-inline: 10px;
   }
   body{
@@ -36,25 +37,53 @@ body {
     margin: 0;
     padding: 0;
   }
-  .container {
+  .our_container {
     padding-inline: 80px;
   }
 }
 
 @media only screen and (min-width: 1024px) {
-  .container {
+  .our_container {
     padding-inline: 40px;
   }
 }
 
 @media only screen and (min-width: 1440px) {
-  .container {
+  .our_container {
     padding-inline: 80px;
   }
 }
 
 @media only screen and (min-width: 2560px) {
-  .container {
+  .our_container {
     padding-inline: 360px;
   }
+}
+
+/* flex */
+
+.flex_between {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.gap_40 {
+  display: flex;
+  gap: 10px;
+}
+
+.vertical_center {
+  display: flex;
+  align-items: center;
+  text-align: end
+}
+
+.fs_32 {
+  font-size: 32px;
+}
+
+.flex_center {
+  display: flex;
+  justify-content: center;
 }
