--- a/src/components/categories/category.css
+++ b/src/components/categories/category.css
@@ -7,11 +7,12 @@
 
 .category {
     color: black;
-    flex-grow: 1;
+    /* flex-grow: 1; */
     padding: 14px 20px;
-    width: 20%;
+    width: fit-content !important;
     text-align: center;
     z-index: 1;
+    cursor: pointer;
 }
 
 .category a {
@@ -21,7 +22,7 @@
     font-weight: 600;
 }
 
-.category a:active{
+.category a:active {
     color: rgb(51, 51, 51)
 }
 
@@ -36,5 +37,5 @@
     .categories {
         display: none;
     }
-    
-  }
+
+}
